added social icons on the bottom fixed hero section (Location and Data was going below)

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -83,6 +83,8 @@
             "sameas": "https://appiumconf.com" 
         }
 
+
+
 </script>
 
 <script>
@@ -317,20 +319,11 @@
 
                 <nav class="footer__nav footer__nav--secondary">
                     <ul class="footer__nav__items">
-
-                        <li class="footer__nav__item">
-                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="https://twitter.com/appium_conf">
-                                <img src="perch/resources/twitter-w40@2x.png" alt="Twitter">
-                            </a>
-                        </li>
-
-
-                        <li class="footer__nav__item">
-                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="mailto:naresh@confengine.com">
-                                <img src="perch/resources/email-w40@2x.png" alt="Email">
-                            </a>
-                        </li>
-
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://twitter.com/appium_conf"> <img src="perch/resources/twitter.svg" alt="Twitter"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.facebook.com/appiumconf"> <img src="perch/resources/facebook.svg" alt="Facebook"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.linkedin.com/showcase/appium-conference"> <img src="perch/resources/linkedin.svg" alt="LinkedIn"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.youtube.com/channel/UCFkYyA-JM1LceW4oW6Jmg6g"> <img src="perch/resources/youtube.svg" alt="YouTube"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="mailto:naresh@confengine.com"> <img src="perch/resources/email-w40@2x.png" alt="Email"> </a></li>
                     </ul>
                 </nav>
 
