--- a/sponsors.html
+++ b/sponsors.html
@@ -83,6 +83,7 @@
             "sameas": "https://appiumconf.com" 
         }
 
+
 </script>
 
 <script>
@@ -275,7 +276,10 @@
                             </h2>
                             <p class="section__subheading">Platinum Sponsor</p>
                         </header>
-                        <p><a href="https://www.pcloudy.com" target="_blank" rel="noopener">pCloudy.com</a>, based out of California is the next-gen mobile app testing platform powered by emerging technologies like AI and Predictive Analytics. With more than 50,000 users across the globe, it is one-of-its-kind full life cycle testing platform for mobile apps developers, QA and mobile DevOps teams. It offers tools for mobile DevOps, including test automation, manual testing, performance testing for web &amp; mobile applications on over 5000 device-browser combinations. It also enables mobile application testing across a large section of real mobile devices and seamlessly integrates with Continuous Integration tools. pCloudy provides On Premise, Private and Public device cloud solutions which enterprises can choose from based on their needs. It has also been recognized by top industry analysts including Gartner and Forrester that included the products in latest report on mobile testing tool landscape.</p>
+                        <p><a href="https://www.pcloudy.com" target="_blank" rel="noopener">pCloudy.com</a>, based out of California is the next-gen mobile app testing platform powered by emerging technologies like AI and Predictive Analytics. With more than 50,000 users across the globe, it is
+                            one-of-its-kind full life cycle testing platform for mobile apps developers, QA and mobile DevOps teams. It offers tools for mobile DevOps, including test automation, manual testing, performance testing for web &amp; mobile applications on over 5000 device-browser
+                            combinations. It also enables mobile application testing across a large section of real mobile devices and seamlessly integrates with Continuous Integration tools. pCloudy provides On Premise, Private and Public device cloud solutions which enterprises can choose from
+                            based on their needs. It has also been recognized by top industry analysts including Gartner and Forrester that included the products in latest report on mobile testing tool landscape.</p>
                         <a href="https://www.pcloudy.com/">Visit Sponsor Site</a>
                     </div>
                 </div>
@@ -298,7 +302,9 @@
                             </h2>
                             <p class="section__subheading">Gold Sponsor</p>
                         </header>
-                        <p>Based out of Paris and San Francisco, Genymotion is the leading Android Emulator on Desktop and Cloud with over 8 million users. Run parallel tests with Appium on Android using Genymotion Cloud as it runs not only in a SaaS platform but also as virtual images on AWS, GCP, Alibaba Cloud or Microsoft Azure (PaaS). Today, our solution enables Android app developers to scale their automated tests and reduce time-to-market of their apps which has made it an integral part of the testing tool stack at innovative tech companies like Facebook, Microsoft, Twitter, Toast, Blackberry Messenger and more.</p>
+                        <p>Based out of Paris and San Francisco, Genymotion is the leading Android Emulator on Desktop and Cloud with over 8 million users. Run parallel tests with Appium on Android using Genymotion Cloud as it runs not only in a SaaS platform but also as virtual images on AWS, GCP,
+                            Alibaba Cloud or Microsoft Azure (PaaS). Today, our solution enables Android app developers to scale their automated tests and reduce time-to-market of their apps which has made it an integral part of the testing tool stack at innovative tech companies like Facebook,
+                            Microsoft, Twitter, Toast, Blackberry Messenger and more.</p>
                         <a href="https://www.genymotion.com">Visit Sponsor Site</a>
                     </div>
                 </div>
@@ -344,8 +350,10 @@
                             </h2>
                             <p class="section__subheading">Gold Sponsor</p>
                         </header>
-                        <p><a href="https://testproject.io/">TestProject</a> is a first of its kind free community powered test automation platform designed for agile teams. It is built on top of Selenium and Appium, supports all major operating systems, and enables every member of your software team to test Web, Android and iOS apps, effortlessly.</p>
-                        <p>TestProject provides developers and automation teams many powerful tools in a simple package, enabling them to easily collaborate while locally creating, running and analyzing their test automation. With TestProject you can use advanced built-in recording capabilities, create and use addons (automation actions shared by the entire community), or develop coded tests using TestProject&rsquo;s powerful SDK.</p>
+                        <p><a href="https://testproject.io/">TestProject</a> is a first of its kind free community powered test automation platform designed for agile teams. It is built on top of Selenium and Appium, supports all major operating systems, and enables every member of your software
+                            team to test Web, Android and iOS apps, effortlessly.</p>
+                        <p>TestProject provides developers and automation teams many powerful tools in a simple package, enabling them to easily collaborate while locally creating, running and analyzing their test automation. With TestProject you can use advanced built-in recording capabilities,
+                            create and use addons (automation actions shared by the entire community), or develop coded tests using TestProject&rsquo;s powerful SDK.</p>
                         <p>Our mission is to create a powerful and collaborative environment for the entire test automation community, without any barriers, and for free.</p>
                         <a href="https://testproject.io/">Visit Sponsor Site</a>
                     </div>
@@ -369,7 +377,8 @@
                             </h2>
                             <p class="section__subheading">Track Sponsor</p>
                         </header>
-                        <p>We know more about leveraging Appium for mobile testing than anyone else. That's because we've spent more time in Appium's codebase than anyone else. We're a group of mobile automation experts who will help you get started or get finished with your mobile app testing or CI.</p>
+                        <p>We know more about leveraging Appium for mobile testing than anyone else. That's because we've spent more time in Appium's codebase than anyone else. We're a group of mobile automation experts who will help you get started or get finished with your mobile app testing or
+                            CI.</p>
                         <a href="https://cloudgrey.io/">Visit Sponsor Site</a>
                     </div>
                 </div>
@@ -393,7 +402,8 @@
                             </h2>
                             <p class="section__subheading">Track Sponsor</p>
                         </header>
-                        <p>Moolya Testing has been a CDT focused testing and automation solutions company by testers turning entrepreneurs. It has served about 100+ customers with its ~200 passionate testers so far. Moolya has taken the responsibility to build tools that QA Testers and Automation Engineers need but didn’t know how to ask for.</p>
+                        <p>Moolya Testing has been a CDT focused testing and automation solutions company by testers turning entrepreneurs. It has served about 100+ customers with its ~200 passionate testers so far. Moolya has taken the responsibility to build tools that QA Testers and Automation
+                            Engineers need but didn’t know how to ask for.</p>
                         <a href="http://bit.ly/bugasura">Visit Sponsor Site</a>
                     </div>
                 </div>
@@ -438,20 +448,11 @@
 
                 <nav class="footer__nav footer__nav--secondary">
                     <ul class="footer__nav__items">
-
-                        <li class="footer__nav__item">
-                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="https://twitter.com/appium_conf">
-                                <img src="perch/resources/twitter-w40@2x.png" alt="Twitter">
-                            </a>
-                        </li>
-
-
-                        <li class="footer__nav__item">
-                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="mailto:naresh@confengine.com">
-                                <img src="perch/resources/email-w40@2x.png" alt="Email">
-                            </a>
-                        </li>
-
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://twitter.com/appium_conf"> <img src="perch/resources/twitter.svg" alt="Twitter"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.facebook.com/appiumconf"> <img src="perch/resources/facebook.svg" alt="Facebook"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.linkedin.com/showcase/appium-conference"> <img src="perch/resources/linkedin.svg" alt="LinkedIn"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.youtube.com/channel/UCFkYyA-JM1LceW4oW6Jmg6g"> <img src="perch/resources/youtube.svg" alt="YouTube"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="mailto:naresh@confengine.com"> <img src="perch/resources/email-w40@2x.png" alt="Email"> </a></li>
                     </ul>
                 </nav>
 
