--- a/workshops.html
+++ b/workshops.html
@@ -83,6 +83,7 @@
             "sameas": "https://appiumconf.com" 
         }
 
+
 </script>
 
 <script>
@@ -211,7 +212,8 @@
                 <div class="col-sm-8 col-md-7 col-md-offset-1">
                     <h2 class="workshop__title">Getting Started with Appium</h2>
                     <div class="workshop__description">
-                        <p>Appium is an open-source tool for automating native, mobile web, and hybrid applications on iOS mobile, Android mobile, and Windows desktop platforms. It is "cross-platform" and allows you to write tests against multiple platforms (iOS, Android, Windows), using the same API. This enables code reuse between iOS, Android, and Windows test suites.</p>
+                        <p>Appium is an open-source tool for automating native, mobile web, and hybrid applications on iOS mobile, Android mobile, and Windows desktop platforms. It is "cross-platform" and allows you to write tests against multiple platforms (iOS, Android, Windows), using the same
+                            API. This enables code reuse between iOS, Android, and Windows test suites.</p>
                         <p>This workshop will help you get started with Appium by covering key concepts like:</p>
                         <ul>
                             <li>Client/Server Architecture</li>
@@ -250,7 +252,8 @@
                 <div class="col-sm-8 col-md-7 col-md-offset-1">
                     <h2 class="workshop__title">Advanced Appium</h2>
                     <div class="workshop__description">
-                        <p>At this workshop, you'll learn about advanced concepts in Appium. We will learn how to write a single script for Android, iOS and mobile web apps. Once our tests are established, we will work on framework design and report. We will also have a detailed look at how can we automate various mobile gestures using TouchActions and mobile endpoints in Appium.</p>
+                        <p>At this workshop, you'll learn about advanced concepts in Appium. We will learn how to write a single script for Android, iOS and mobile web apps. Once our tests are established, we will work on framework design and report. We will also have a detailed look at how can we
+                            automate various mobile gestures using TouchActions and mobile endpoints in Appium.</p>
                     </div>
                     <div class="workshop__link">
                         <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposal/9304/advanced-appium">Read more</a>
@@ -275,7 +278,8 @@
                 <div class="col-sm-8 col-md-7 col-md-offset-1">
                     <h2 class="workshop__title">Appium at Scale - Mobile Grid workshop</h2>
                     <div class="workshop__description">
-                        <p>Selenium Grid can be a bit daunting to get up and running. Starting it is quite easy, but using it effectively can require pulling in third-party tools. In this workshop we’ll cover how to run your grid effectively, using best practices culled from several large grid installations with a hybrid setup for both Selenium and Appium tests.</p>
+                        <p>Selenium Grid can be a bit daunting to get up and running. Starting it is quite easy, but using it effectively can require pulling in third-party tools. In this workshop we’ll cover how to run your grid effectively, using best practices culled from several large grid
+                            installations with a hybrid setup for both Selenium and Appium tests.</p>
                     </div>
                     <div class="workshop__link">
                         <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposal/9301/appium-at-scale-mobile-grid-workshop">Read more</a>
@@ -299,7 +303,10 @@
                 <div class="col-sm-8 col-md-7 col-md-offset-1">
                     <h2 class="workshop__title">Fix a bug become a committer</h2>
                     <div class="workshop__description">
-                        <p>Have you ever wondered how Appium works under the covers? Do you get frustrated with locators not locating, app screens not loading, or test behaving inconsistently from one run to the next? Appium is an attempt to unify thousands of disparate elements across a wide spectrum of challenges into a single, common interface that works seamlessly across all the major mobile and desktop OSs - and yet only a handful of volunteers work to maintain this gigantic effort. If you would like to enhance your own Appium experience while contributing back to the software that has defined so many of our careers, come to this workshop. We'll dissect the different elements of Appium, dive into its internals, learn how it was built and how to make changes to it, and even write a unit test you can contribute on the same day!</p>
+                        <p>Have you ever wondered how Appium works under the covers? Do you get frustrated with locators not locating, app screens not loading, or test behaving inconsistently from one run to the next? Appium is an attempt to unify thousands of disparate elements across a wide
+                            spectrum of challenges into a single, common interface that works seamlessly across all the major mobile and desktop OSs - and yet only a handful of volunteers work to maintain this gigantic effort. If you would like to enhance your own Appium experience while
+                            contributing back to the software that has defined so many of our careers, come to this workshop. We'll dissect the different elements of Appium, dive into its internals, learn how it was built and how to make changes to it, and even write a unit test you can contribute
+                            on the same day!</p>
                     </div>
                     <div class="workshop__link">
                         <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposal/9467/fix-a-bug-become-a-committer">Read more</a>
@@ -431,20 +438,11 @@
 
                 <nav class="footer__nav footer__nav--secondary">
                     <ul class="footer__nav__items">
-
-                        <li class="footer__nav__item">
-                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="https://twitter.com/appium_conf">
-                                <img src="perch/resources/twitter-w40@2x.png" alt="Twitter">
-                            </a>
-                        </li>
-
-
-                        <li class="footer__nav__item">
-                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="mailto:naresh@confengine.com">
-                                <img src="perch/resources/email-w40@2x.png" alt="Email">
-                            </a>
-                        </li>
-
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://twitter.com/appium_conf"> <img src="perch/resources/twitter.svg" alt="Twitter"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.facebook.com/appiumconf"> <img src="perch/resources/facebook.svg" alt="Facebook"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.linkedin.com/showcase/appium-conference"> <img src="perch/resources/linkedin.svg" alt="LinkedIn"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.youtube.com/channel/UCFkYyA-JM1LceW4oW6Jmg6g"> <img src="perch/resources/youtube.svg" alt="YouTube"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="mailto:naresh@confengine.com"> <img src="perch/resources/email-w40@2x.png" alt="Email"> </a></li>
                     </ul>
                 </nav>
 
