--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         }
 
 
+
+
 </script>
 
 <script>
@@ -4313,11 +4315,9 @@
         <div class="hero__content">
             <div class="row row--flex">
                 <div class="col-md-7">
-
                     <h3 class="hero__subheading">The official Appium conference</h3>
-
                 </div>
-                <div class="col-md-4 col-md-offset-1 u-text--to-end col--flex--bottom">
+                <div class="col-md-4 col-md-offset-1 u-text--to-end col--flex--bottom" style="margin-left: 8.2%">
                     <h3>Bengaluru, India</h3>
                     <h3 style="margin-top:0">June 13-15 2019</h3>
                     <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/register/selection">Register</a>
@@ -4927,7 +4927,25 @@
 
                         <li class="footer__nav__item">
                             <a class="footer__nav__item__link footer__nav__item__link--icon" href="https://twitter.com/appium_conf">
-                                <img src="perch/resources/twitter-w40@2x.png" alt="Twitter">
+                                <img src="perch/resources/twitter.svg" alt="Twitter">
+                            </a>
+                        </li>
+
+                        <li class="footer__nav__item">
+                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.facebook.com/appiumconf">
+                                <img src="perch/resources/facebook.svg" alt="Facebook">
+                            </a>
+                        </li>
+
+                        <li class="footer__nav__item">
+                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.linkedin.com/showcase/appium-conference">
+                                <img src="perch/resources/linkedin.svg" alt="LinkedIn">
+                            </a>
+                        </li>
+
+                        <li class="footer__nav__item">
+                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.youtube.com/channel/UCFkYyA-JM1LceW4oW6Jmg6g">
+                                <img src="perch/resources/youtube.svg" alt="YouTube">
                             </a>
                         </li>
 
