--- a/sponsor-booths.html
+++ b/sponsor-booths.html
@@ -83,6 +83,7 @@
             "sameas": "https://appiumconf.com" 
         }
 
+
 </script>
 
 <script>
@@ -204,7 +205,8 @@
 
                 <p>Stalls will be operation from <strong>9:00 AM to 6:00 PM</strong> on <strong>June 14th and 15th</strong>.</p>
 
-                <p><span style="text-decoration: underline;"><strong>Note</strong></span>: Your stalls will be setup on June 13th late night (11:00 PM onwards) and will be handed over to you on <span style="text-decoration: underline;"><strong>June 14th 7:30 AM</strong></span> for any additional setup.</p>
+                <p><span style="text-decoration: underline;"><strong>Note</strong></span>: Your stalls will be setup on June 13th late night (11:00 PM onwards) and will be handed over to you on <span style="text-decoration: underline;"><strong>June 14th 7:30 AM</strong></span> for any additional
+                    setup.</p>
 
                 <div class="text-center">
                     <a class="btn btn-primary btn--cta" href="mailto:naresh@confengine.com?subject=[Appium Conf] Booth Slot Sign-up" style="color: #505f68">Grab Your Booth Slot</a>
@@ -315,20 +317,11 @@
 
                 <nav class="footer__nav footer__nav--secondary">
                     <ul class="footer__nav__items">
-
-                        <li class="footer__nav__item">
-                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="https://twitter.com/appium_conf">
-                                <img src="perch/resources/twitter-w40@2x.png" alt="Twitter">
-                            </a>
-                        </li>
-
-
-                        <li class="footer__nav__item">
-                            <a class="footer__nav__item__link footer__nav__item__link--icon" href="mailto:naresh@confengine.com">
-                                <img src="perch/resources/email-w40@2x.png" alt="Email">
-                            </a>
-                        </li>
-
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://twitter.com/appium_conf"> <img src="perch/resources/twitter.svg" alt="Twitter"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.facebook.com/appiumconf"> <img src="perch/resources/facebook.svg" alt="Facebook"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.linkedin.com/showcase/appium-conference"> <img src="perch/resources/linkedin.svg" alt="LinkedIn"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="https://www.youtube.com/channel/UCFkYyA-JM1LceW4oW6Jmg6g"> <img src="perch/resources/youtube.svg" alt="YouTube"> </a></li>
+                        <li class="footer__nav__item"><a class="footer__nav__item__link footer__nav__item__link--icon" href="mailto:naresh@confengine.com"> <img src="perch/resources/email-w40@2x.png" alt="Email"> </a></li>
                     </ul>
                 </nav>
 
