--- a/workshops.html
+++ b/workshops.html
@@ -212,8 +212,9 @@
                 <div class="col-sm-8 col-md-7 col-md-offset-1">
                     <h2 class="workshop__title">Getting Started with Appium</h2>
                     <div class="workshop__description">
-                        <p>Appium is an open-source tool for automating native, mobile web, and hybrid applications on iOS mobile, Android mobile, and Windows desktop platforms. It is "cross-platform" and allows you to write tests against multiple platforms (iOS, Android, Windows), using the same
-                            API. This enables code reuse between iOS, Android, and Windows test suites.</p>
+                        <p>You always wanted to start Mobile app Automation using Appium but did not know where and what to start with? Or started but got stuck among understanding capabilities, locating elements, finding whats wrong and your daily work deadlines? Yeah, we all have been there. Hence here is this workshop, precisely designed for beginners to quickly get started with Appium in NodeJS.</p>
+                        <p>At this workshop, you will learn everything from the scratch step by step. We will together understand the key concepts, apply them right there and write our “first test” in appium before we learn more nitty-gritties as takeaway for you to go and implement at your actual work directly.</p>
+                        <p>Think of this as a one-day crash course in Appium. The course will be prepared in NodeJS but there will be help for those who want to get started in Java.</p>
                         <p>This workshop will help you get started with Appium by covering key concepts like:</p>
                         <ul>
                             <li>Client/Server Architecture</li>
