--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -1,9 +1,6 @@
 <!doctype html>
-<html lang="en" class="no-js">
-<!--[if IE 9 ]>
-<html lang="en" class="ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
-<html lang="en"> <!--<![endif]-->
+<html>
+<head>
 <meta charset="utf-8"/>
 
 <title>Code of Conduct</title>
@@ -112,6 +109,27 @@
 
 </script>
 <meta name="google-site-verification" content="EAMCAlqDHpFW1zOPcdKV4oaPhhR_vcCBbsDs7cAh5u0"/>
+    <!-- Facebook Pixel Code -->
+    <script> !function (f, b, e, v, n, t, s) {
+        if (f.fbq)return;
+        n = f.fbq = function () {
+            n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+        };
+        if (!f._fbq)f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = '2.0';
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s)
+    }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '873759709636793');
+    fbq('track', 'PageView'); </script>
+    <noscript><img height="1" width="1" src="https://www.facebook.com/tr?id=873759709636793&ev=PageView &noscript=1"/></noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 <body id="top" class="page page--generic">
 <nav class="navbar navbar-default navbar--primary with-background">
