fixed the header added Speaker interview links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
 
-<link rel="stylesheet" href="css/main.min-time=1516098596.css">
+<link rel="stylesheet" href="css/main.min-time=1516098597.css">
 <script>document.documentElement.className = 'js';</script>
 
 <script type="application/ld+json">
@@ -4288,6 +4288,10 @@
 
                 </li>
                 <li>
+                    <a href="https://confengine.com/appium-conf-2019/speaker/interview/summary">Know-Thy-Speakers</a>
+
+                </li>
+                <li>
                     <a href="sponsors.html">Sponsors</a>
 
                 </li>
@@ -4359,7 +4363,7 @@
                 </div>
 
                 <div class="text-center" style="margin-top: 40px">
-                    <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/schedule/rich" style="color: #505f68">
+                    <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/schedule/rich">
                         Checkout the Schedule
                     </a>
                 </div>
@@ -4797,8 +4801,11 @@
             </div>
 
             <div class="col-sm-12 text-center" style="margin-top: 40px">
-                <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposals" style="color: #505f68">
-                    Checkout their Session Details
+                <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposals">
+                    Session Details
+                </a>
+                <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/speaker/interview/summary">
+                    Speaker Interviews
                 </a>
             </div>
         </div>
@@ -4850,7 +4857,7 @@
 
                 <div class="section__intro">
                     <div class="text-center">
-                        <a class="btn btn-primary btn--cta" href="/docs/AppiumConf2019SponsorshipProspectus.pdf" style="color: #505f68">Download Sponsorship Prospectus</a>
+                        <a class="btn btn-primary btn--cta" href="/docs/AppiumConf2019SponsorshipProspectus.pdf">Download Sponsorship Prospectus</a>
                     </div>
                 </div>
 
