--- a/sponsor-booths.html
+++ b/sponsor-booths.html
@@ -58,7 +58,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
 
-<link rel="stylesheet" href="css/main.min-time=1516098596.css">
+<link rel="stylesheet" href="css/main.min-time=1516098597.css">
 <script>document.documentElement.className = 'js';</script>
 
 <script type="application/ld+json">
@@ -134,6 +134,10 @@
             <ul class="nav navbar-nav">
                 <li>
                     <a href="https://confengine.com/appium-conf-2019/schedule/rich">Schedule</a>
+
+                </li>
+                <li>
+                    <a href="https://confengine.com/appium-conf-2019/speaker/interview/summary">Know-Thy-Speakers</a>
 
                 </li>
                 <li class="selected">
