fixed button colour

--- a/index.html
+++ b/index.html
@@ -4363,7 +4363,7 @@
                 </div>
 
                 <div class="text-center" style="margin-top: 40px">
-                    <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/schedule/rich">
+                    <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/schedule/rich" style="color: #505f68;">
                         Checkout the Schedule
                     </a>
                 </div>
@@ -4857,7 +4857,7 @@
 
                 <div class="section__intro">
                     <div class="text-center">
-                        <a class="btn btn-primary btn--cta" href="/docs/AppiumConf2019SponsorshipProspectus.pdf">Download Sponsorship Prospectus</a>
+                        <a class="btn btn-primary btn--cta" href="/docs/AppiumConf2019SponsorshipProspectus.pdf" style="color: #505f68;">Download Sponsorship Prospectus</a>
                     </div>
                 </div>
 
