fixed menu on Safari

--- a/index.html
+++ b/index.html
@@ -4300,7 +4300,7 @@
 
                 </li>
                 <li>
-                    <a href="workshops.html">Pre-Conf Workshops</a>
+                    <a href="workshops.html">Workshops</a>
 
                 </li>
                 <li>
