--- a/workshops.html
+++ b/workshops.html
@@ -167,7 +167,7 @@ fbq('track', 'PageView'); </script>
 
                 </li>
                 <li class="selected">
-                    <a href="workshops.html">Pre-Conf Workshops</a>
+                    <a href="workshops.html">Workshops</a>
 
                 </li>
                 <li>
