--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -168,7 +168,7 @@
 
                 </li>
                 <li>
-                    <a href="workshops.html">Pre-Conf Workshops</a>
+                    <a href="workshops.html">Workshops</a>
 
                 </li>
                 <li>
