--- a/location.html
+++ b/location.html
@@ -167,7 +167,7 @@
 
                 </li>
                 <li>
-                    <a href="workshops.html">Pre-Conf Workshops</a>
+                    <a href="workshops.html">Workshops</a>
 
                 </li>
                 <li>
