--- a/sponsor-booths.html
+++ b/sponsor-booths.html
@@ -149,7 +149,7 @@
 
                 </li>
                 <li>
-                    <a href="workshops.html">Pre-Conf Workshops</a>
+                    <a href="workshops.html">Workshops</a>
 
                 </li>
                 <li>
