--- a/location.html
+++ b/location.html
@@ -448,16 +448,16 @@
 </script>
 <!-- Twitter universal website tag code -->
 <script>
-    !function (e, t, n, s, u, a) {
-        e.twq || (s = e.twq = function () {
-            s.exe ? s.exe.apply(s, arguments) : s.queue.push(arguments);
-        }, s.version = '1.1', s.queue = [], u = t.createElement(n), u.async = !0, u.src = '//static.ads-twitter.com/uwt.js',
-                a = t.getElementsByTagName(n)[0], a.parentNode.insertBefore(u, a))
-    }(window, document, 'script');
+    !function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
+    },s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
+            a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
     // Insert Twitter Pixel ID and Standard Event data below
-    twq('init', 'nylya');
-    twq('track', 'PageView');
+    twq('init','nylya');
+    twq('track','PageView');
 </script>
 <!-- End Twitter universal website tag code -->
+<!-- Start LinkedIn website tag code -->
+<script type="text/javascript"> _linkedin_partner_id = "1114538"; window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || []; window._linkedin_data_partner_ids.push(_linkedin_partner_id); </script><script type="text/javascript"> (function(){var s = document.getElementsByTagName("script")[0]; var b = document.createElement("script"); b.type = "text/javascript";b.async = true; b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js"; s.parentNode.insertBefore(b, s);})(); </script> <noscript> <img height="1" width="1" style="display:none;" alt="" src="https://dc.ads.linkedin.com/collect/?pid=1114538&fmt=gif" /> </noscript>
+<!-- End LinkedIn website tag code -->
 </body>
 </html>
