fixed urls on all pages

--- a/sponsors.html
+++ b/sponsors.html
@@ -18,7 +18,7 @@
 
 <!-- Social sharing meta -->
 <meta name="twitter:site" content="@appium_conf"/>
-<meta name="twitter:url" content="https://appiumconf.com/sponsors"/>
+<meta name="twitter:url" content="https://appiumconf.com/sponsors.html"/>
 <meta name="twitter:title" content="Sponsors"/>
 <meta name="twitter:description" content="The Official Appium and Mobile Testing Conference"/>
 <meta name="twitter:card" content="summary_large_image"/>
