--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -18,7 +18,7 @@
 
 <!-- Social sharing meta -->
 <meta name="twitter:site" content="@appium_conf"/>
-<meta name="twitter:url" content="https://appiumconf.com/code-of-conduct"/>
+<meta name="twitter:url" content="https://appiumconf.com/code-of-conduct.html"/>
 <meta name="twitter:title" content="Code of Conduct"/>
 <meta name="twitter:description" content="The Official Appium and Mobile Testing Conference"/>
 <meta name="twitter:card" content="summary_large_image"/>
