--- a/data-promise.html
+++ b/data-promise.html
@@ -18,7 +18,7 @@
 
 <!-- Social sharing meta -->
 <meta name="twitter:site" content="@appium_conf"/>
-<meta name="twitter:url" content="https://appiumconf.com/data-promise"/>
+<meta name="twitter:url" content="https://appiumconf.com/data-promise.html"/>
 <meta name="twitter:title" content="Data Promise"/>
 <meta name="twitter:description" content="The Official Appium and Mobile Testing Conference"/>
 <meta name="twitter:card" content="summary_large_image"/>
