--- a/location.html
+++ b/location.html
@@ -18,7 +18,7 @@
 
 <!-- Social sharing meta -->
 <meta name="twitter:site" content="@appium_conf"/>
-<meta name="twitter:url" content="https://appiumconf.com/location"/>
+<meta name="twitter:url" content="https://appiumconf.com/location.html"/>
 <meta name="twitter:title" content="Location"/>
 <meta name="twitter:description" content="The Official Appium and Mobile Testing Conference"/>
 <meta name="twitter:card" content="summary_large_image"/>
