--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -220,7 +220,7 @@
                         verbal comments, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention. Participants asked to stop any
                         harassing behaviour are expected to comply immediately. These policies apply in every space at the venue related to conference activity, and to all participants in every role.</p>
 
-                    <p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified by their t-shirts. We will be happy to assist those experiencing harassment to feel
+                    <p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. We will be happy to assist those experiencing harassment to feel
                         safe for the duration of the conference, for example by providing escorts or contacting police should this be required. </p>
                     <p><strong>During the conference you can also get hold of Naresh Jain to report any issues. <a href="mailto:naresh@confengine.com">Email us</a></strong>.</p>
                     <p>We expect participants to follow these rules at all conference venues and conference-related social events.</p>
