--- a/index.html
+++ b/index.html
@@ -4815,17 +4815,17 @@
 <section class="section section--decorated">
     <div class="container">
         <div class="row">
-            <h2 class="section__heading">Highlights from 2018 Conference</h2>
+            <h2 class="section__heading">Highlights from 2019 Conference</h2>
             <div class="col-sm-10 col-sm-offset-1 col-md-5" style="margin-bottom: 20px">
 
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLhr2WKNPXcZOmOf1k2aqkbMZwnZb2pSZL" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PL9Z-JgiTsOYSfJh9YKI9Stj3FMwHERw6w" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <p></p>
                 <div class="text-center">
 
-                    <a class="btn btn-primary btn--cta" href="https://www.youtube.com/watch?list=PLhr2WKNPXcZOmOf1k2aqkbMZwnZb2pSZL&v=drpTRKfRnhQ" target="_blank">
-                        Watch 2018 videos
+                    <a class="btn btn-primary btn--cta" href="https://www.youtube.com/watch?list=PL9Z-JgiTsOYSfJh9YKI9Stj3FMwHERw6w" target="_blank">
+                        Watch 2019 videos
                     </a>
 
 
@@ -4834,12 +4834,11 @@
 
             <div class="col-sm-10 col-sm-offset-1 col-md-5">
 
-                <a data-flickr-embed="true" href="https://www.flickr.com/photos/whiteoctevents/albums/72157694713098194" title="AppiumConf 2018"><img src="https://farm1.staticflickr.com/797/27468346268_cd2f71eb76.jpg" width="500" height="333" alt="AppiumConf 2018"></a>
-                <script async src="https://embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+                <a data-flickr-embed="true" href="https://www.flickr.com/photos/182043856@N02/albums/72157709111138387" title="Appium Conference 2019"><img src="https://live.staticflickr.com/65535/48074104087_217d17c943_z.jpg" width="500" height="333" alt="Appium Conference 2019"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                 <p></p>
                 <div class="text-center">
 
-                    <a class="btn btn-primary btn--cta" href="https://www.flickr.com/photos/whiteoctevents/albums/72157694713098194">
+                    <a class="btn btn-primary btn--cta" href="https://www.flickr.com/photos/182043856@N02/albums/72157709111138387">
                         Check out the photos
                     </a>
 
